Refactor(composer): Changed composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "photon-power-ui-kit",
+  "name": "photon/power-ui-kit",
   "type": "project",
   "keywords": ["layout","ui","ux"],
   "license": "MIT",
