--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "project",
   "keywords": ["layout","ui","ux"],
   "license": "MIT",
-  "description": "PhotonBundle for a better UX.",
+  "description": "eMAG Apps UI KIT for a better UX and UI.",
   "authors": [
     {
       "name": "George Vlada",
@@ -12,6 +12,30 @@
     {
       "name": "Valentin Bica",
       "email": "valentin.bica@emag.ro"
+    },
+    {
+      "name": "Vlad Dusa",
+      "email": "vlad.dusa@emag.ro"
+    },
+    {
+      "name": "Eduard Stransky",
+      "email": "eduard.stransky@emag.ro"
+    },
+    {
+      "name": "Alexandru Breahna",
+      "email": "alexandru.breahna@emag.ro"
+    },
+    {
+      "name": "Ionut Vornicescu",
+      "email": "ionut.vornicescu@emag.ro"
+    },
+    {
+      "name": "Remus Joghiu",
+      "email": "remus.joghiu@emag.ro"
+    },
+    {
+      "name": "Marius Petrescu",
+      "email": "marius.petrescu@emag.ro"
     }
   ] 
 }
