--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git//git@github.com:eMAGTechLabs/PhotonPowerUIKit.git"
   },
   "devDependencies": {
+    "grunt-contrib-watch": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-cli": "^1.2.0",
