--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "emag-apps-ui-kit",
   "version": "1.0.0",
   "description": "A Bootstrap-based UI KIT for admin applications, developed by eMAG HX Team",
-  "dependencies": {},
+  "dependencies": {
+    "install": "^0.8.2",
+    "npm": "^4.0.3"
+  },
   "repository": {
     "type": "git",
     "url": "git//git@github.com:eMAGTechLabs/emag-apps-ui-kit.git"
   },
   "devDependencies": {
-    "grunt-contrib-watch": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-cli": "^1.2.0",
@@ -16,8 +18,11 @@
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-less": "^1.1.0",
     "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-csscomb": "^3.1.0",
     "grunt-html-prettyprinter": "^1.5.0",
+    "grunt-jscs": "^3.0.1",
+    "grunt-lesslint": "^3.2.0",
     "grunt-php2html": "^0.3.0",
     "grunt-postcss": "^0.7.2",
     "stylelint": "^4.3.4",
@@ -30,6 +35,7 @@
   "dist_scripts": "dist/js",
   "dist_styles": "dist/css",
   "dist_plugins": "dist/plugins",
+  "data": "data",
   "data_scripts": "data/scripts",
   "data_styles": "data/styles",
   "data_plugins": "data/plugins"
