--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "url": "git//git@github.com:eMAGTechLabs/emag-apps-ui-kit.git"
   },
   "devDependencies": {
+    "eslint": "^3.11.1",
+    "eslint-config-google": "^0.7.1",
+    "eslint-config-jquery": "^1.0.0",
+    "eslint-config-standard": "^6.2.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
@@ -20,11 +25,13 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-csscomb": "^3.1.0",
+    "grunt-eslint": "^19.0.0",
     "grunt-html-prettyprinter": "^1.5.0",
     "grunt-jscs": "^3.0.1",
     "grunt-lesslint": "^3.2.0",
     "grunt-php2html": "^0.3.0",
     "grunt-postcss": "^0.7.2",
+    "gruntify-eslint": "^3.1.0",
     "stylelint": "^4.3.4",
     "stylelint-config-standard": "^3.0.0",
     "time-grunt": "^1.3.0"
