--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "devDependencies": {
     "eslint": "^3.11.1",
-    "grunt": "^0.4.5",
     "eslint-config-es5": "^0.5.0",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-browser-sync": "^2.2.0",
     "grunt-cli": "^1.2.0",
@@ -29,6 +29,7 @@
     "grunt-php2html": "^0.3.0",
     "grunt-postcss": "^0.7.2",
     "gruntify-eslint": "^3.1.0",
+    "husky": "^0.13.1",
     "stylelint": "^4.3.4",
     "stylelint-config-standard": "^3.0.0",
     "time-grunt": "^1.3.0"
