--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-banner": "^0.1.3",
     "gulp-concat": "^2.6.1",
     "gulp-less": "^4.0.1",
+    "gulp-livereload": "^4.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-php2html": "^0.3.2",
     "gulp-plumber": "^1.2.0",
@@ -43,6 +44,7 @@
     "gulp-terser": "^1.1.5",
     "husky": "^0.13.1",
     "less-plugin-autoprefix": "^2.0.0",
+    "static-server": "^2.2.1",
     "stylelint": "^4.3.4",
     "stylelint-config-standard": "^3.0.0",
     "time-grunt": "^1.3.0"
