--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "git://git@github.com:eMAGTechLabs/emag-apps-ui-kit.git"
   },
   "devDependencies": {
+    "browser-sync": "^2.26.3",
     "eslint": "^3.11.1",
     "eslint-config-es5": "^0.5.0",
     "grunt": "^0.4.5",
@@ -34,7 +35,6 @@
     "gulp-banner": "^0.1.3",
     "gulp-concat": "^2.6.1",
     "gulp-less": "^4.0.1",
-    "gulp-livereload": "^4.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-php2html": "^0.3.2",
     "gulp-plumber": "^1.2.0",
@@ -44,7 +44,6 @@
     "gulp-terser": "^1.1.5",
     "husky": "^0.13.1",
     "less-plugin-autoprefix": "^2.0.0",
-    "static-server": "^2.2.1",
     "stylelint": "^4.3.4",
     "stylelint-config-standard": "^3.0.0",
     "time-grunt": "^1.3.0"
